# simple-swu-beamer

./: .gitignore  README.html  README.md  main.py  pyproject.toml  run_docs.sh  run_test.sh
.github/workflows/: docs.yml
docs/: conf.py  index.rst  pdf2imgs.py
docs/mds/: prompt.md
docs/secs/: examples.md  faq.md  install.md  usage.md
examples/: README.md
examples/_template/: README.md  main.tex
examples/_template/assets/: README.md
examples/_template/images/: README.md
examples/db-examples/: beamerthemesintef.sty  customize.tex  db-chapter8.tex  refs.bib
examples/db-examples/secs/: db-1.tex  db-2.tex  db-3.tex  db-4.tex  sql-2.tex  sql-3.tex
examples/paper-ppt/: backup.sty  beamerthemesimpleswu.sty  ldagcl-gemini-default.tex  ldagcl-simpleswu-43.tex  ldagcl-simpleswu.tex  main.tex
scripts/: package_examples.sh
simple_swu_beamer/: beamerthemesimpleswu.sty  customize.tex
