[project]
name = "simple-swu-beamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "ipython>=9.8.0",
    "matplotlib>=3.10.8",
    "myst-parser[linkify]>=4.0.1",
    "numpydoc>=1.10.0",
    "shibuya>=2025.12.14",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.2.3",
]

[dependency-groups]
dev = [
    "sphinx-autobuild>=2025.8.25",
]
docs = [
    "ipython>=9.8.0",
    "matplotlib>=3.10.8",
    "myst-parser[linkify]>=4.0.1",
    "numpydoc>=1.10.0",
    "pdf2image>=1.17.0",
    "shibuya>=2025.12.14",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.2.3",
]

[tool.uv.workspace]
members = [
    "demos/simple-ucas-beamer",
]
